# SAP-Bewerbung

./: README.md
TODO-Projekt/todo-backend/: Program.cs  todo-backend.csproj
TODO-Projekt/todo-backend/Controllers/: TaskController.cs
TODO-Projekt/todo-backend/DTOs/: CreateTaskDTO.cs  UpdateTaskDTO.cs
TODO-Projekt/todo-backend/Interfaces/: ITaskRepository.cs  IUnitOfWork.cs
TODO-Projekt/todo-backend/Models/: DataContext.cs  Task.cs
TODO-Projekt/todo-backend/Properties/: launchSettings.json
TODO-Projekt/todo-backend/Repositories/: TaskRepository.cs  UnitOfWork.cs
gebaeudeautomation/: .gitignore  README.md  gebaeudeautomation.sln
gebaeudeautomation/API/: API.csproj  Dockerfile  Program.cs  appsettings.Development.json  appsettings.json
gebaeudeautomation/API/Controllers/: AktorController.cs  DataController.cs  SensorController.cs
gebaeudeautomation/API/DTOs/: AddSensorDataDto.cs  AktorCreateDTO.cs  AllAktorsDTO.cs  AllSensorsDisplayedDto.cs  AllSensorsDto.cs  SensorCreateDto.cs  SensorDataSend.cs  UpdateSensorDTO.cs
gebaeudeautomation/API/Data/: DataContext.cs  UnitOfWork.cs
gebaeudeautomation/docker/: Dockerfile  docker-compose.yaml  test.py
internetprog/: README.md  index.html  onpageload.js  script.js  stylesheet.css
umwelt-detective-master/: .gitignore  CMakeLists.txt  THWildBingoQrReader.py  fuel_consumption_module.cpp  fuel_consumption_objects.cpp  game.cpp  game.h  game_module.h  game_object.h  main.cpp  main.h  qiproject.xml  speech.cpp  speech.h  water_consumption_module.cpp  water_consumption_objects.cpp
(+41 files in other folders)
